package ar.uba.fi.modeloNuevo.Clases.Efectos;

public interface Efecto {
    public String aplicarA(String cadena);
}
